Add set history to workout view

--- a/app/views/workouts/show.html.haml
+++ b/app/views/workouts/show.html.haml
@@ -4,3 +4,6 @@
   - @workout.exercises.each do |exercise|
     .exercise.container
       = link_to exercise.name, new_workout_set_path({ workout_set: { exercise_id: exercise.id, workout_id: @workout.id } })
+      %ul
+        - @workout.sets.where(exercise: exercise).each do |set|
+          %li= "#{set.weight} x #{set.rep_count}"
