--- a/app/assets/stylesheets/exercise_groups.css.scss
+++ b/app/assets/stylesheets/exercise_groups.css.scss
@@ -1,7 +1,9 @@
 .exercise_groups {
   .exercise_group {
     &.container {
-      background: gray;
+      background: whitesmoke;
+      padding: 10px;
+      margin: 10px;
     }
   }
 }
