--- a/app/views/workouts/show.html.haml
+++ b/app/views/workouts/show.html.haml
@@ -1,9 +1,11 @@
-%h1 Current Workout
+.workouts
+  %h1 Current Workout
 
-.workout
-  - @workout.exercises.each do |exercise|
-    .exercise.container
-      = link_to exercise.name, new_workout_set_path({ workout_set: { exercise_id: exercise.id, workout_id: @workout.id } })
-      %ul
-        - @workout.sets.where(exercise: exercise).each do |set|
-          %li= "#{set.weight} x #{set.rep_count}"
+  .workout
+    - @workout.exercises.each do |exercise|
+      .exercise.container
+        %p= exercise.name
+        %ul
+          - @workout.sets.where(exercise: exercise).each do |set|
+            %li= "#{set.weight} x #{set.rep_count}"
+        = link_to 'add set', new_workout_set_path({ workout_set: { exercise_id: exercise.id, workout_id: @workout.id } })
