--- a/app/views/workout_sets/new.html.haml
+++ b/app/views/workout_sets/new.html.haml
@@ -1,7 +1,7 @@
 = form_for @set do |f|
   .weight
     = f.label :weight
-    = f.number_field :weight, value: @set.previous_set.try!(:weight)
+    = f.number_field :weight, step: 5, value: @set.previous_set.try!(:weight)
   .rep_count
     = f.label :rep_count
     = f.number_field :rep_count, value: @set.previous_set.try!(:rep_count)
