Improve mobile site usability
* Bigger font
* Bigger buttons

--- a/app/views/workouts/show.html.haml
+++ b/app/views/workouts/show.html.haml
@@ -4,8 +4,8 @@
   .workout
     - @workout.exercises.each do |exercise|
       .exercise.container
-        %p= exercise.name
+        %h3= exercise.name
         %ul
           - @workout.sets.where(exercise: exercise).each do |set|
             %li= "#{set.weight} x #{set.rep_count}"
-        = link_to 'add set', new_workout_set_path({ workout_set: { exercise_id: exercise.id, workout_id: @workout.id } })
+        %a.button{ href: new_workout_set_path({ workout_set: { exercise_id: exercise.id, workout_id: @workout.id } }) } add set
