--- a/app/assets/stylesheets/workouts.css.scss
+++ b/app/assets/stylesheets/workouts.css.scss
@@ -1,10 +1,12 @@
 .workouts {
+  h1 {
+    text-align: center;
+  }
+
   .workout {
     .exercise {
-      &.container {
-        background: whitesmoke;
-        padding: 10px;
-        margin: 10px;
+      h3 {
+        margin: 0px;
       }
     }
   }
