--- a/app/views/workout_sets/new.html.haml
+++ b/app/views/workout_sets/new.html.haml
@@ -1,11 +1,16 @@
-= form_for @set do |f|
-  .weight
-    = f.label :weight
-    = f.number_field :weight, step: 5, value: @set.previous_set.try!(:weight)
-  .rep_count
-    = f.label :rep_count
-    = f.number_field :rep_count, value: @set.previous_set.try!(:rep_count)
-  = f.hidden_field :exercise_id
-  = f.hidden_field :workout_id
+.workout_set
+  %h1= @set.exercise.name
 
-  = f.submit
+  = form_for @set do |f|
+    .container
+      .weight
+        = f.label :weight
+        = f.number_field :weight, step: 5, value: @set.previous_set.try!(:weight)
+      .rep_count
+        = f.label :rep_count
+        = f.number_field :rep_count, value: @set.previous_set.try!(:rep_count)
+      = f.hidden_field :exercise_id
+      = f.hidden_field :workout_id
+
+      / bring into alignment w/ other buttons
+      = f.submit class: 'button'
