Further improve mobile styling

--- a/app/views/workout_sets/new.html.haml
+++ b/app/views/workout_sets/new.html.haml
@@ -12,5 +12,4 @@
       = f.hidden_field :exercise_id
       = f.hidden_field :workout_id
 
-      / bring into alignment w/ other buttons
-      = f.submit class: 'button'
+      = f.submit 'add set', class: 'button'
