--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -1,25 +1,33 @@
 body {
   font-family: Arial;
   text-transform: uppercase;
+  font-size: 48px;
 
   h1 {
     text-align: center;
   }
 
   .button {
-    background: #9966FF;
+    background: #9966FF !important;
+    border: none;
     color: white;
     display: block;
+    font-size: 48px;
     font-weight: bold;
-    padding: 10px;
+    height: 150px;
+    line-height: 150px;
     text-align: center;
     text-decoration: none;
+    text-transform: inherit;
+    -webkit-appearance: none;
+    width: 100%;
   }
 
   .container {
     background: whitesmoke;
     margin: 10px;
     padding: 10px;
+    margin-bottom: 50px;
   }
 }
 
