--- a/app/assets/stylesheets/workout_sets.css.scss
+++ b/app/assets/stylesheets/workout_sets.css.scss
@@ -1,12 +1,14 @@
 .workout_set {
-  .button {
-    font-family: Arial;
-    font-weight: bold;
-    text-transform: uppercase;
-    width: 100%;
-  }
-
   .weight, .rep_count {
-    margin: 10px;
+    height: 150px;
+    line-height: 150px;
+    margin: 50px 10px;
+
+    input {
+      float: right;
+      height: 80px;
+      font-size: inherit;
+      margin-top: 20px;
+    }
   }
 }
