--- a/app/views/workout_sets/_form.html.haml
+++ b/app/views/workout_sets/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @set, url: workout_sets_path(@set) do |f|
+= form_for @set do |f|
   .container
     .weight
       = f.label :weight
@@ -9,4 +9,4 @@
     = f.hidden_field :exercise_id
     = f.hidden_field :workout_id
 
-    = f.submit 'add set', class: 'button'
+    = f.submit class: 'button'
