Make workout set weight a float, update test

--- a/app/views/workouts/show.html.haml
+++ b/app/views/workouts/show.html.haml
@@ -7,6 +7,6 @@
         %h3= exercise.name
         %ul
           - @workout.sets.where(exercise: exercise).order(:created_at).each do |set|
-            %li= "#{set.weight} x #{set.rep_count}"
+            %li= "#{sprintf('%g', set.weight)} x #{set.rep_count}"
             = link_to 'edit', edit_workout_set_path(set)
         %a.button{ href: new_workout_set_path({ workout_set: { exercise_id: exercise.id, workout_id: @workout.id } }) } add set
