--- a/app/views/workouts/show.html.haml
+++ b/app/views/workouts/show.html.haml
@@ -7,6 +7,14 @@
         %h3= exercise.name
         %ul
           - @workout.sets.where(exercise: exercise).order(:created_at).each do |set|
-            %li= "#{sprintf('%g', set.weight)} x #{set.rep_count}"
-            = link_to 'edit', edit_workout_set_path(set)
+            .workout_set
+              %li= "#{sprintf('%g', set.weight)} x #{set.rep_count}"
+              = link_to 'edit', edit_workout_set_path(set)
+
+          - if @last_workout
+            .previous
+              previous workout
+              - @last_workout.sets.where(exercise: exercise).order(:created_at).each do |set|
+                .workout_set
+                  %li= "#{sprintf('%g', set.weight)} x #{set.rep_count}"
         %a.button{ href: new_workout_set_path({ workout_set: { exercise_id: exercise.id, workout_id: @workout.id } }) } add set
